--- a/fund.css
+++ b/fund.css
@@ -12,7 +12,7 @@ body {
     justify-content: space-between;
     border-bottom: 1px solid #ddd;
 }
-/* yes */
+/* yess */
 .header img {
     height: 50px;
 }
