--- a/sb.css
+++ b/sb.css
@@ -12,7 +12,7 @@ body {
     justify-content: space-between;
     border-bottom: 1px solid #ddd;
 }
-/* y */
+/* ye */
 .header img {
     height: 50px;
 }
