--- a/sb.css
+++ b/sb.css
@@ -36,7 +36,7 @@ body {
     color: #ff0000;
 }
 .nav-bar {
-    background-color: #00a2e8;
+    background-color: #0D090A;
     padding: 10px 0;
     display: flex;
     justify-content: space-around;
@@ -79,7 +79,7 @@ body {
     margin-left: 20px;
 }
 .main-content .breadcrumb {
-    background-color: #0073e6;
+    background-color: #0D090A;
     color: #fff;
     padding: 10px;
     margin-bottom: 20px;
@@ -103,7 +103,7 @@ body {
     margin-right: 10px;
     width: 50px;
     height: 50px;
-    background-color: #0073e6;
+    background-color: #0D090A;
     color: #fff;
     display: flex;
     align-items: center;
@@ -112,7 +112,7 @@ body {
 }
 .main-content .account-info .account-item a {
     text-decoration: none;
-    color: #0073e6;
+    color: #0D090A;
     font-size: 16px;
 }
 .profile-status {
@@ -122,7 +122,7 @@ body {
     margin-bottom: 20px;
 }
 .profile-status .status-bar {
-    background-color: #00a2e8;
+    background-color: #0D090A;
     height: 10px;
     width: 80%;
 }
@@ -135,7 +135,7 @@ body {
     justify-content: space-between;
 }
 .footer {
-    background-color: #0073e6;
+    background-color: #0D090A;
     color: #fff;
     text-align: center;
     padding: 10px 0;
